err/infi.asi-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/data'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/emport'...
Listing './lib/python3.5/site-packages/emport-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/git_py-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/gitpy'...
Listing './lib/python3.5/site-packages/hexdump-3.3.egg-info'...
Listing './lib/python3.5/site-packages/infi'...
Listing './lib/python3.5/site-packages/infi/asi'...
Listing './lib/python3.5/site-packages/infi/asi/cdb'...
Listing './lib/python3.5/site-packages/infi/asi/cdb/diagnostic'...
Listing './lib/python3.5/site-packages/infi/asi/cdb/diagnostic/ses_pages'...
Listing './lib/python3.5/site-packages/infi/asi/cdb/inquiry'...
Listing './lib/python3.5/site-packages/infi/asi/cdb/inquiry/vpd_pages'...
Listing './lib/python3.5/site-packages/infi/asi/cdb/persist'...
Listing './lib/python3.5/site-packages/infi/asi/coroutines'...
Listing './lib/python3.5/site-packages/infi/asi/sense'...
Compiling './lib/python3.5/site-packages/infi/asi/win32.py'...
***   File "./lib/python3.5/site-packages/infi/asi/win32.py", line 89
    GENERIC_READ = 0x80000000L
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/asi_utils'...
Compiling './lib/python3.5/site-packages/infi/asi_utils/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/asi_utils/__init__.py", line 57
    except AsiCheckConditionError, error:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/dtypes'...
Listing './lib/python3.5/site-packages/infi/dtypes/hctl'...
Listing './lib/python3.5/site-packages/infi/exceptools'...
Listing './lib/python3.5/site-packages/infi/execute'...
Listing './lib/python3.5/site-packages/infi/instruct'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer/reference'...
Listing './lib/python3.5/site-packages/infi/instruct/struct'...
Listing './lib/python3.5/site-packages/infi/instruct/utils'...
Listing './lib/python3.5/site-packages/infi/monotonic_time'...
Listing './lib/python3.5/site-packages/infi/os_info'...
Listing './lib/python3.5/site-packages/infi/pyutils'...
Listing './lib/python3.5/site-packages/infi/pyutils/functors'...
Listing './lib/python3.5/site-packages/infi/sgutils'...
Listing './lib/python3.5/site-packages/infi/sgutils/ioctl'...
Listing './lib/python3.5/site-packages/infi/sgutils/ioctl/opcodes'...
Listing './lib/python3.5/site-packages/infi/sgutils/ioctl/structures'...
Listing './lib/python3.5/site-packages/infi/sgutils/ioctl/tests'...
Listing './lib/python3.5/site-packages/infi/sgutils/sg_map'...
Listing './lib/python3.5/site-packages/infi/sgutils/sg_map/tests'...
Listing './lib/python3.5/site-packages/infi/sgutils/sg_reset'...
Listing './lib/python3.5/site-packages/infi.asi-0.4.15.egg-info'...
Listing './lib/python3.5/site-packages/infi.asi_utils-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.dtypes.hctl-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.exceptools-0.2.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.execute-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/infi.instruct-0.6.31.egg-info'...
Listing './lib/python3.5/site-packages/infi.monotonic_time-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.os_info-0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/infi.pyutils-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/infi.sgutils-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
